--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,3 +3,5 @@
 
 <h2>body:</h2>
 <p><%= @book.body %></p>
+<%= link_to "Edit", edit_book_path(@book.id) %>
+<%= link_to "delete", book_path(@book.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
