--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,3 +1,8 @@
-<!―- viewファイルの作成、アクション名と同じ名前にする（25/3/9 14:39) -->
+<!―- viewファイルの作成、アクション名と同じ名前にする -->
 
 <h1>ようこそ Bookersへ!</h1>
+
+<p><strong>Bookers</strong>では、様々な書籍に関するあなたの意見や<br>
+印象を共有し交換することができます</br></p>
+
+<a href="books/new">start</a>
