--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,15 +1,36 @@
-<!-- 詳細画面 -->
+<!-- 一覧画面 -->
 
 <h1>Books</h1>
 
 <% @books.each do |book| %>
 
-  <p>title</p>
-  <span>
-    <%= link_to list.title, list_path(list.id) %>
-  </span>
+  <p>Title</p>
+  <span><%= book.title %></span>
 
   <p>Body</p>
-  <span><%= book.title %></span>
+  <span><%= book.body %></span>
+
+  <span>
+  <%= link_to 'Show', book_path(book.id) %>
+  <%= link_to 'Edit', edit_book_path(book.id) %>
+  <%= link_to 'Destroy', book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
+  </span>
+
   
+<% end %>
+
+
+
+<!-- 投稿画面 -->
+
+<h1>New book</h1>
+
+<%= form_with model: @book do |f| %>
+  <h4>Title</h4>
+  <%= f.text_field :title %>
+	
+  <h4>Body</h4>
+  <%= f.text_area :body %>
+	
+  <%= f.submit 'Create Book' %>
 <% end %>
