--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,13 +1,13 @@
-<!-- 投稿画面 -->
+# <!-- 投稿画面 -->
 
-<h1>New book</h1>
+# <h1>New book</h1>
 
-<%= form_with model: @book do |f| %>
-  <h4>Title</h4>
-  <%= f.text_field :title %>
+# <%= form_with model: @book do |f| %>
+  # <h4>Title</h4>
+  # <%= f.text_field :title %>
 	
-  <h4>body</h4>
-  <%= f.text_area :body %>
+  # <h4>body</h4>
+  # <%= f.text_area :body %>
 	
-  <%= f.submit 'Create Book' %>
-<% end %>
+  # <%= f.submit 'Create Book' %>
+# <% end %>
