--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -5,4 +5,4 @@
 <p><strong>Bookers</strong>では、様々な書籍に関するあなたの意見や<br>
 印象を共有し交換することができます</br></p>
 
-<a href="books/new">start</a>
+<%= link_to 'start', books_path %>
