--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,9 +1,18 @@
-<!-- 一覧画面 -->
+<!-- Show画面 -->
+<div>
+  <%= flash[:notice] %>
+</div>
 
-<h2>title:</h2>
-<p><%= @book.title %></p>
+<p>
+<strong>Title:</strong>
+<%= @book.title %>
+</p>
 
-<h2>body:</h2>
-<p><%= @book.body %></p>
+<p>
+<strong>Body:</strong>
+<%= @book.body %>
+</p>
+
 <%= link_to "Edit", edit_book_path(@book.id) %>
+|
 <%= link_to "Back", books_path %>
