--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,8 +1,10 @@
 <!―- viewファイルの作成、アクション名と同じ名前にする -->
 
+<div class="top-page">
 <h1>ようこそ Bookersへ!</h1>
 
 <p><strong>Bookers</strong>では、様々な書籍に関するあなたの意見や<br>
 印象を共有し交換することができます</br></p>
 
 <%= link_to 'start', books_path %>
+</div>
